# genpass

./: .gitignore  Cargo.toml  README.md  init.sh
src/: cli.rs  consts.rs  info.rs  lib.rs  main.rs
