[package]
name = "genpass"
version = "0.1.0"
edition = "2021"
authors = ["Kostya Potapenko <kostyaboy777@gmail.com>"]
description = "A simple utility to generate random passwords based on a user-specified input"

repository = "https://github.com/kostDev/genpass"
readme = "README.md"

[lib]
name = "genpass"
path = "src/lib.rs"

[[bin]]
name = "genpass"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0